--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Akevas : Marketplace des boutiques en ligne" />
+    <meta property="og:url" content="akevas.com" />
+    <link rel='canonical' href="https://akevas.com/" />
+      <meta name='description' content='Marketplace des boutiques en ligne'/>
+      <meta name='keywords' content='boutique en ligne, marketplace, e-commerce, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne' />
+    <meta property="og:image" content="https://akevas.com/assets/logo.png" />
+    <meta name="twitter:image" content="https://akevas.com/assets/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:secure_url" content="https://akevas.com/assets/logo.png" />
+    <meta name="twitter:description" content='Marketplace des boutiques en ligne' />
     <title>Akevas : Marketplace des boutiques en ligne</title>
   </head>
   <body>
