--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel='canonical' href="https://akevas.com/" />
       <meta name='description' content='Marketplace des boutiques en ligne'/>
       <meta name='keywords' content='boutique en ligne, marketplace, e-commerce, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne' />
-    <meta property="og:image" content="https://akevas.com/assets/logo.png" />
-    <meta name="twitter:image" content="https://akevas.com/assets/logo.png" />
+    <meta property="og:image" content="https://akevas.com/assets/home.png" />
+    <meta name="twitter:image" content="https://akevas.com/assets/home.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:secure_url" content="https://akevas.com/assets/logo.png" />
+    <meta property="og:image:secure_url" content="https://akevas.com/assets/home.png" />
     <meta name="twitter:description" content='Marketplace des boutiques en ligne' />
     <title>Akevas : Marketplace des boutiques en ligne</title>
   </head>
