docs: Update `twitter:description` meta tag content in `index.html`.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:secure_url" content="https://seller.akevas.com/assets/home.png" />
-    <meta name="twitter:description" content='Développez votre business avec Akevas' />
+    <meta name="twitter:description" content="Rejoignez la marketplace qui connecte plus de 2 millions d'acheteurs à des vendeurs de confiance" />
     <title>Développez votre business avec Akevas</title>
   </head>
   <body>
