--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta name="google" content="notranslate" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Développez votre business avec Akevas" />
-    <meta property="og:url" content="seller.akevas.com" />
-    <link rel='canonical' href="https://seller.akevas.com/" />
-      <meta name='description' content="Rejoignez la marketplace qui connecte plus de 2 millions d'acheteurs à des vendeurs de confiance"/>
-      <meta name='keywords' content='boutique en ligne, marketplace, e-commerce, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne' />
-    <meta property="og:image" content="https://seller.akevas.com/assets/home.png" />
-    <meta name="twitter:image" content="https://seller.akevas.com/assets/home.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:secure_url" content="https://seller.akevas.com/assets/home.png" />
-    <meta name="twitter:description" content="Rejoignez la marketplace qui connecte plus de 2 millions d'acheteurs à des vendeurs de confiance" />
-    <title>Développez votre business avec Akevas</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google" content="notranslate" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta property="og:title" content="Développez votre business avec Akevas" />
+  <meta property="og:url" content="seller.akevas.com" />
+  <link rel='canonical' href="https://seller.akevas.com/" />
+  <meta name='description'
+    content="Rejoignez la marketplace qui connecte plus de 2 millions d'acheteurs à des vendeurs de confiance" />
+  <meta name='keywords'
+    content='boutique en ligne, marketplace, e-commerce, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne, e-commerce en ligne' />
+  <meta property="og:image" content="https://seller.akevas.com/assets/home.png" />
+  <meta name="twitter:image" content="https://seller.akevas.com/assets/home.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:secure_url" content="https://seller.akevas.com/assets/home.png" />
+  <meta name="twitter:description"
+    content="Rejoignez la marketplace qui connecte plus de 2 millions d'acheteurs à des vendeurs de confiance" />
+  <title>Développez votre business avec Akevas</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
